--- a/TutorialAndDevGuide/Tutorial/preliminaries.tex
+++ b/TutorialAndDevGuide/Tutorial/preliminaries.tex
@@ -31,7 +31,7 @@ Copilot is distributed throughout a series of packages at Hackage:
 \begin{itemize}
 \item copilot-language: Contains the language front-end.
 \item copilot-core: Contains an intermediate representation for Copilot programs (shared by all back-ends).
-\item copilot-c99: A back-end for Copilot targeting C99 (based on Atom, \url{http://hackage.haskell.org/package/atom}).
+\item copilot-c99: A back-end for Copilot targeting C99 (based on Atom, \url{http://hackage.haskell.org/package/atom}). \textbf{Not updated anymore, might be deprecated soon.}
 \item copilot-sbv: A back-end for Copilot targeting C99 (based on SBV, \url{http://hackage.haskell.org/package/sbv}).
 \item copilot-libraries: A set of utility functions for Copilot, including a clock-library, a linear temporal logic framework,
 a voting library, and a regular expression framework.
@@ -40,7 +40,8 @@ a voting library, and a regular expression framework.
 \end{itemize}
 
 Many of the examples in this paper can be found at
-\url{https://github.com/leepike/Copilot/tree/copilot2.0/Examples}.
+\url{https://github.com/Copilot-Language/Copilot/tree/copilot2.0/Examples}.
+\todo[inline]{Update the version of Copilot when released (3.0 ?), and do not forget to put some examplesForACSL not already in the directory (WCV, TCAS, Self-Separation).}
 
 To use the language, your Haskell module should contain the following import:
 %
