--- a/TutorialAndDevGuide/Tutorial/Language.tex
+++ b/TutorialAndDevGuide/Tutorial/Language.tex
@@ -617,10 +617,10 @@ Here is an example of the splitting process in the Figure~\ref{fig:splitting lab
 \end{lstlisting}
 
 \begin{figure}[!htb]
-	\includegraphics[width=46mm]{images/label/main.pdf}
+	\includegraphics[width=46mm]{images/label/main.ps}
 	\centering
-	\includegraphics[width=42mm]{images/label/splitted.pdf}
-	\includegraphics[width=42mm]{images/label/splitted2.pdf}
+	\includegraphics[width=42mm]{images/label/splitted.ps}
+	\includegraphics[width=42mm]{images/label/splitted2.ps}
 	\caption{The splitting process. The AST on the left is split into two smaller ASTs, that then generate two separate functions into two separate files, making it easier to prove the contracts for them.}
 	\label{fig:splitting label}
 \end{figure}
