added pdf files and little corr.

--- a/TutorialAndDevGuide/DevGuide/CompileCopilot.tex
+++ b/TutorialAndDevGuide/DevGuide/CompileCopilot.tex
@@ -7,7 +7,7 @@ What you need to do :
 \item First install all the useful stuff : CompCert (2.4 or later, coq needed, opam recommanded), Frama-c (version sodium or later), Z3 (at least 4.3.2), CVC4 (at least 1.4), ghc 7.10 or later (and its whole toolchain, like the haskell platform).
 \subitem Optionnaly, you could install splint, an up to date gcc (5.1 or later). 
 \subitem First install the haskell platform
-\subitem Then install the right version of ghc (>= 7.10)
+\subitem Then install the right version of ghc ($>= 7.10$)
 \item Make sure that cabal is installed, and update it to the version 1.22 or later (run \texttt{cabal install cabal cabal-install } for that). 
 \item create a directory named Copilot-Language and cd into it. Then clone the following :
 \subitem https://github.com/Copilot-Language/examplesForACSL
