load instructions added

--- a/TutorialAndDevGuide/Tutorial/Tools.tex
+++ b/TutorialAndDevGuide/Tutorial/Tools.tex
@@ -107,6 +107,15 @@ Ok, modules loaded: Language.Copilot.
 \end{lstlisting}
 %
 
+A copilot file \texttt{file} is loaded as follows:
+%
+\begin{lstlisting}[language = Copilot]
+Language.Copilot> :l file
+\end{lstlisting}
+
+Notice that \texttt{file} has to be located
+in the directory \emph{Copilot}.
+
 The copilot interpreter is invoked as follows:
 %
 \begin{lstlisting}[language = Copilot]
